tests/neg-macros/newClassExtendsNoParents/Test_2.scala
//> using options -experimental

def test: Any = makeClass("foo") // error
